--- a/hc-cnc-pendant-host/src/main/resources/hcPendant.properties
+++ b/hc-cnc-pendant-host/src/main/resources/hcPendant.properties
@@ -60,15 +60,56 @@ data.jogUnit.0=20
 data.jogUnit.1=21
 
 
+# gcode.sender selects what gcode sending program to interface with.
+# if blank, then the system property "gcode.sender" will be used
+# there must be these associated properties that match the chosen gcode sender:
+# ex: gcode.sender=xyz
+#   xyz.gcode.url
+#   xyz.gcode.paramName
+#   xyz.gcode.outputResponse
+#   xyz.gcode.separator
+#   xyz.index.url
+#   xyz.index.visit.seconds
+#   xyz.index.outputResponse
+
+
+# can be overridden by system property "gcode.sender", if absent will default to "ugs"
+gcode.sender=bcnc
+
+# use this char to separate gcode commands on a single line. if a sender specifies something
+# different than this default, then any instance of this default will be replaced by the
+# specified separator for the sender. long winded way of saying UGS uses a semicolon and
+# bCNC uses \n.
+gcode.separator.default=;
+
+######## UGS
+
 # program will add the "?gCode=[GCODE]" part onto the URL at runtime
-ugs.url.gcode=http://localhost:8080/sendGcode
-ugs.url.index=http://localhost:8080/getSystemState
-
-# automatically visit the index page every N seconds
-ugs.index.visit.seconds=300
-
-ugs.index.outputResponse=false
+ugs.gcode.url=http://localhost:8080/sendGcode
+ugs.gcode.paramName=gCode
+ugs.gcode.separator=;
 ugs.gcode.outputResponse=true
+
+# automatically visit the index page every N seconds (0 means never)
+ugs.index.visit.seconds=300
+ugs.index.url=http://localhost:8080/getSystemState
+ugs.index.outputResponse=false
+
+######## bCNC
+
+bcnc.gcode.url=http://localhost:8080/send
+bcnc.gcode.paramName=gcode
+bcnc.gcode.separator=\n
+bcnc.gcode.outputResponse=true
+
+# automatically visit the index page every N seconds (0 means never)
+bcnc.index.visit.seconds=0
+bcnc.index.url=http://localhost:8080/getSystemState
+bcnc.index.outputResponse=false
+
+
+
+
 
 # specify 0 for wait(), or >0 for wait(N)
 # zero would mean this never detects disco (i.e. zero is bad)
