notify feature working with bcnc

--- a/production-2020/hc-cnc-pendant-2020-python/pendant.ini
+++ b/production-2020/hc-cnc-pendant-2020-python/pendant.ini
@@ -1,5 +1,17 @@
 [DEFAULT]
 
+# email config gets programmatically added into this by __main__ application.
+# format of pendant-email.ini is as follows (and should be kept out of this
+# file, and out of the source tree entirely)
+#[EMAIL]
+#email_server=SERVER
+#email_port=PORT
+#email_from=FROM_ADDR
+#email_password=FROM_PASSWORD
+#email_to=TO_ADDR
+
+
+# string the device sends over serial to indicate it is done booting
 serial_device_start_msg=HC CNC PENDANT 2020
 
 ##### Probe configuration
@@ -116,6 +128,9 @@ bcnc_index_visit_seconds=0
 bcnc_index_url=http://localhost:8080/getSystemState
 bcnc_index_outputResponse=false
 
+# strings bcnc writes to stdout when a job starts/stops
+bcnc_stdin_start=Controller state changed to: Run (Running: True)
+bcnc_stdin_stop=Controller state changed to: Idle (Running: False)
 
 ####### Config for basic application system properties
 
@@ -128,6 +143,7 @@ window_y=250
 gui_frame_console_clear=Clear
 gui_frame_log_title=Log Console
 gui_frame_gcode_title=G-Code History
+gui_frame_stdin_title=STDIN
 
 gui_frame_gcode_clear=Clear
 
@@ -143,15 +159,6 @@ gui_frame_emu_title=Device Emulator
 gui_frame_emu_image=hc_device_emulator85.png
 
 
-
-
-
-
 # number of seconds to loop on reading serial data (1 is fine)
 comm_read_timeout=1
-
-# how long the msg consumer thread sleeps waiting for a message (doesnt really matter...
-# ...because we notify on anything important)
-ctl_thread_sleep_sec=3600
-#ctl_thread_sleep_sec=5
 
