converted constants to enumerations

--- a/production-2020/hc-cnc-pendant-2020-python/pendant-email.ini
+++ b/production-2020/hc-cnc-pendant-2020-python/pendant-email.ini
@@ -1,7 +1,7 @@
 [EMAIL]
 
 email_server=SERVER
-email_port=PORT
+email_port=-1
 email_from=FROM_ADDR
 email_password=FROM_PASSWORD
 email_to=TO_ADDR
